--- a/default.properties
+++ b/default.properties
@@ -9,3 +9,4 @@
 
 # Project target.
 target=android-8
+android.library.reference.1=../../../../devel/sdks/Scoreloop_core_social_android_2.2/ScoreloopUI
