--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,9 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.whiterabbit.checkers"
-      android:versionCode="3"
-      android:versionName="2.1">
+      android:versionCode="4"
+      android:versionName="2.2" 
+      android:installLocation="auto">
       
       	<uses-sdk android:minSdkVersion="4" />
       	
