--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.whiterabbit.checkers"
-      android:versionCode="4"
-      android:versionName="2.2" 
+      android:versionCode="7"
+      android:versionName="2.6" 
       android:installLocation="auto">
       
       	<uses-sdk android:minSdkVersion="4" />
@@ -39,6 +39,9 @@
         <activity android:name=".ui.BoardsListActivity"
           android:configChanges="orientation">    
         </activity>
+        <activity android:name=".ui.CheckersStallActivity"
+          android:configChanges="orientation">    
+        </activity>
         <activity android:name=".ui.CheckersMainMenu"
           android:configChanges="orientation">
           <intent-filter>
@@ -51,7 +54,7 @@
         
         
 	<!-- Defining the ScoreloopUI activities -->
-	
+	<activity android:name="com.scoreloop.client.android.ui.PostScoreOverlayActivity" android:theme="@style/sl_dialog"/>
 	<activity android:name="com.scoreloop.client.android.ui.EntryScreenActivity" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
 	<activity android:name="com.scoreloop.client.android.ui.ShowResultOverlayActivity" android:theme="@style/sl_dialog"/>
 	<activity android:name="com.scoreloop.client.android.ui.LeaderboardsScreenActivity" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
@@ -86,10 +89,12 @@
         
 	<!-- The application's publisher ID assigned by AdMob -->
 	<meta-data android:value="a14d2ccfb20d9cd" android:name="ADMOB_PUBLISHER_ID" />
-	<!-- AdMobActivity definition -->
-	<activity android:name="com.admob.android.ads.AdMobActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:configChanges="orientation|keyboard|keyboardHidden" />
+	
 	<!-- Track Market installs -->
-	<receiver android:name="com.admob.android.ads.analytics.InstallReceiver" android:exported="true">
+	<activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation"/>
+	
+	<receiver android:name="com.google.ads.InstallReceiver" android:exported="true">
 	<intent-filter> <action android:name="com.android.vending.INSTALL_REFERRER" />
 	</intent-filter> </receiver>
     </application>
