--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="/Users/fede/Dropbox/devel/andengineexamples/lib/andengine.jar"/>
 	<classpathentry kind="lib" path="lib/libGoogleAnalytics.jar"/>
 	<classpathentry kind="lib" path="/Users/fede/devel/sdks/Scoreloop_core_social_android_2.2/ScoreloopUI/libs/scoreloop-core.jar"/>
-	<classpathentry kind="lib" path="GoogleAdMobAdsSdk-4.0.4.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="src" path="/ScoreloopUI"/>
+	<classpathentry kind="lib" path="GoogleAdMobAdsSdk-4.1.0.jar"/>
 	<classpathentry kind="src" path="ScoreloopUI_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
