--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,22 +16,22 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.whiterabbit.checkers"
-      android:versionCode="7"
-      android:versionName="2.6" 
+      android:versionCode="23"
+      android:versionName="2.23" 
       android:installLocation="auto">
       
       	<uses-sdk android:minSdkVersion="4" />
       	
       	
- 
- 	<uses-permission android:name="android.permission.READ_CONTACTS" />  	
+ 	<uses-permission android:name="android.permission.READ_CONTACTS"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <application 		android:name="PegDroidApplication"  android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" android:theme="@android:style/Theme.NoTitleBar">
+    <application 		android:name="PegDroidApplication"  
+    android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false" android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".ui.CheckersGameActivity"
                   android:configChanges="orientation">
             
