--- a/assets/scoreloop.properties
+++ b/assets/scoreloop.properties
@@ -17,7 +17,7 @@ ui.res.modes.name = game_modes
 
 ui.feature.achievement = true
 
-#ui.feature.address_book = false
+ui.feature.address_book = false
 ui.feature.news = true
 #ui.format.score.result = %04.0f pts
 #ui.format.money = %2$s(%1$.2f) 
