--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,14 +16,13 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.whiterabbit.checkers"
-      android:versionCode="23"
-      android:versionName="2.23" 
+      android:versionCode="24"
+      android:versionName="2.24" 
       android:installLocation="auto">
       
       	<uses-sdk android:minSdkVersion="4" />
       	
-      	
- 	<uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>  	
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -31,10 +30,13 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <application 		android:name="PegDroidApplication"  
-    android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false" android:theme="@android:style/Theme.NoTitleBar">
+    android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".ui.CheckersGameActivity"
                   android:configChanges="orientation">
             
+        </activity>
+        <activity android:name=".ui.PegDroidPrefs"
+          android:configChanges="orientation">    
         </activity>
         <activity android:name=".ui.BoardsListActivity"
           android:configChanges="orientation">    
