--- a/assets/scoreloop.properties
+++ b/assets/scoreloop.properties
@@ -1,9 +1,6 @@
 # CoreSocial properties
 #
 game.id = e1ceb377-70db-443a-92cd-fa8b42f4d859
-game.secret  = wQWoVs822E0+3GGfJkeaEWTsjm1lXIuEBxnG1GdVUXn8izA+glGiMw==
-game.mode.min = 0
-game.mode.max = 18
 game.name = PegDroid
 game.version = 1.0
 currency.code = SLD
@@ -16,8 +13,13 @@ currency.name.plural = Lemons
 ui.res.modes.name = game_modes
 
 ui.feature.achievement = true
-
 ui.feature.address_book = false
+game.mode.min = 5
+game.mode.max = 13
+format.score = mode:5=English Standard;mode:6=French Style;mode:7=Germany;mode:8=Asymmetrical;mode:9=Diamond;mode:10=Small Diamond;mode:11=SixBySix;mode:12=Wieglebs;mode:13=NineByNine;
+
+
+#ui.feature.address_book = false
 ui.feature.news = true
 #ui.format.score.result = %04.0f pts
 #ui.format.money = %2$s(%1$.2f) 
